--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,6 @@
 <head>
-  <title>Todo List</title>
+  <title>Crodity</title>
+  <meta name="viewport" content="initial-scale=1">
 </head>
  
 <body>
